syntax = "proto3";

package sss;

import "version.proto";

message SecretProto {
	VersionProto version = 1;
	bytes secret = 2;
	string mime_type = 3;
}
